@@ -198,7 +198,7 @@ class JInstallationModelConfiguration extends JModel
 		{
 			$db = JInstallationHelperDatabase::getDBO($options->db_type, $options->db_host, $options->db_user, $options->db_pass, $options->db_name, $options->db_prefix);
 		}
-		catch (JDatabseException $e)
+		catch (JDatabaseException $e)
 		{
 			$this->setError(JText::sprintf('INSTL_ERROR_CONNECT_DB', $e->getMessage()));
 		}
